package local.sop.sopinfo.institution.application.api.dto;

import java.util.UUID;

public record InstitutionQuery(UUID id) { }
